Added mailhog, n98-magerun2, git. Various fixes to unison

--- a/scripts/project.tmpl
+++ b/scripts/project.tmpl
@@ -17,7 +17,12 @@ confirmmerge = false
 prefer=newer
 perms=0
 dontchmod=true
+#ignorearchives=true
 ignore = Name .DS_Store
 ignore = Name */media
+ignore = Name */var/cache
+ignore = Name */var/page_cache
+ignore = Name */var/session
+ignore = Name .unison*
 logfile = PROJECT.log
 
