--- a/scripts/project.tmpl
+++ b/scripts/project.tmpl
@@ -17,11 +17,13 @@ confirmmerge = false
 prefer=newer
 perms=0
 dontchmod=true
+ignorecase=false
 #ignorearchives=true
 ignore = Name .DS_Store
 ignore = Name */media
 ignore = Name */var/cache
 ignore = Name */var/page_cache
+ignore = Name */full_page_cache
 ignore = Name */var/session
 ignore = Name .unison*
 logfile = PROJECT.log
